# Programming

./: .gitignore  README.md  file.txt  greeting.txt  mergesort.py  screens.txt  sort.c
debug/: a.out  task1  task1.c  task2  task2.c  task3  task3.c  task4  task4.c  task5  task5.c
lab03/: README.md
lab04/: README.md
lab05/: README.md  lab51.c
lab06/: lab61.c
lab07/: README.md
lab08/: README.md  lab8.c
lab09/: file.txt  greeting.txt  mergesort.py
lab12/: Auto  README.md  Test  auto.c  auto.h  dynamic_exe  lab12  lab12.c  main.c
lab13/: CMakeLists.txt  Makefile  README.md  main.c
lab13/include/: auto.h
lab13/src/: auto.c
lab14/: README.md  a.out  test.c
lab15/: README.md  database.rle  file  file.c  staff.csv
lab16/: README.md  threads  threads.c
lab17/: README.md  mathematic.py  test_math.py
lab18/: CMakeLists.txt  README.md
lab18/src/: main.cpp  paint_core.cpp  paint_core.hpp
lab3/: lab1.c
lab4/: lab4.c  lab5.c
lab5/: lab52.c
lab7/: strlab.c
rgr/: CMakeLists.txt  README.md  config.cfg  maze_output.txt
rgr/src/: logger.cpp  logger.h  main.cpp  maze.cpp  maze.h
rgr/src/tests/: tests.cpp
